Updating html and css file

--- a/bio.html
+++ b/bio.html
@@ -5,27 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
+
 <body>
-    <h1>Student Bio</h1>
-    <img src="https://media.licdn.com/dms/image/C4E03AQEV90wDh2xweQ/profile-displayphoto-shrink_100_100/0?e=1562803200&v=beta&t=BgDBt7wMtblSxMfxaf2w_lIn5MqI7gNTJMUSLKNWdv8" height="250px" width="250px" alt="">
-    <div>
-        <h2> <strong>ERIC MALVAR</strong> </h2>
-    </div>
-
-    <p>
+ <div class="container">
+        <h1>Student Bio</h1>
+        <img id="bio_image" src="https://media.licdn.com/dms/image/C4E03AQEV90wDh2xweQ/profile-displayphoto-shrink_100_100/0?e=1562803200&v=beta&t=BgDBt7wMtblSxMfxaf2w_lIn5MqI7gNTJMUSLKNWdv8" height="250px" width="250px" alt="">
+        <section class="main_bio">
+            <h2> <strong>ERIC MALVAR</strong> </h2>
         
-    My name is Eric Malvar and I am new to learning HTML and CSS. I hope to one day work in software development for a gaming company.
 
-    </p>
+        <p>
+            
+        My name is Eric Malvar and I am new to learning HTML and CSS. I hope to one day work in software development for a gaming company.
 
-    <h3>Contact Info</h3>
-    <p>
-        <ul>
-            <li><strong>Email:</strong> <a href="mailto:e.luismalvar@gmail.com" target="_blank">e.luismalvar@gmail.com</a></li>
-            <li><strong>Github</strong>  <a href="https://github.com/malvarius/" target="_blank">https://github.com/malvarius/</a></li>
-            <li><strong>Portfolio:</strong>  Coming soon</li>
-        </ul>
-    </p>
+        </p>
+        </section>
+
+
+        <section class="contact_info">
+        <h3>Contact Info</h3>
+        <p>
+            <ul>
+                <li><strong>Email:</strong> <a href="mailto:e.luismalvar@gmail.com" target="_blank">e.luismalvar@gmail.com</a></li>
+                <li><strong>Github</strong>  <a href="https://github.com/malvarius/" target="_blank">https://github.com/malvarius/</a></li>
+                <li><strong>Portfolio:</strong>  Coming soon</li>
+            </ul>
+        </p>
+    </section>
+</div>
 </body>
+
 </html>
