updated css file

--- a/bio.html
+++ b/bio.html
@@ -11,7 +11,7 @@
 <body>
  <div class="container">
         <h1>Student Bio</h1>
-        <img id="bio_image" src="https://media.licdn.com/dms/image/C4E03AQEV90wDh2xweQ/profile-displayphoto-shrink_100_100/0?e=1562803200&v=beta&t=BgDBt7wMtblSxMfxaf2w_lIn5MqI7gNTJMUSLKNWdv8" height="250px" width="250px" alt="">
+        <img id="bio_image" src="https://media.licdn.com/dms/image/C4E03AQEV90wDh2xweQ/profile-displayphoto-shrink_100_100/0?e=1562803200&v=beta&t=BgDBt7wMtblSxMfxaf2w_lIn5MqI7gNTJMUSLKNWdv8" height="250px" width="250px" alt="Error">
         <section class="main_bio">
             <h2> <strong>ERIC MALVAR</strong> </h2>
         
